# bigO

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Pipfile  manage.py  production.yml
.envs/: .django.dist  .postgres.dist
bigO/: conftest.py
bigO/BabyUI/: forms.py  package-lock.json  package.json  services.py  tsconfig.json  urls.py  utils.py  views.py  vite.config.js
bigO/core/: admin.py  apps.py  middlewares.py  models.py  services.py  tasks.py  urls.py  views.py
bigO/finance/: admin.py  forms.py  models.py
bigO/graphql/: schema.py
bigO/net_manager/: admin.py  models.py
bigO/node_manager/: admin.py  api.py  forms.py  models.py  permissions.py  serializer.py  services.py  tasks.py  typing.py  urls.py  views.py
bigO/notifications/: admin.py  forms.py  services.py
bigO/proxy_manager/: admin.py  forms.py  metrics.py  models.py  services.py  tasks.py  typing.py  urls.py  utils.py  views.py
bigO/proxy_platforms/: models.py  services.py
bigO/rest/: api_router.py
bigO/telegram_bot/: admin.py  apps.py  dispatchers.py  metrics.py  router.py  (+5 more)
config/: api.py  asgi.py  celery_app.py  db_routers.py  otel_config.py  urls.py  wsgi.py
docs/: conf.py  users.rst
goingTo/: .gitignore  fn.go  go.mod  go.sum  main.go  types.go
requirements/: base.txt  local.txt  production.txt
smallO1/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml
smallO1/smallo1/: api_types.py  main.py  utils.py
smallO2/: .dockerignore  .gitignore  Dockerfile  fn.go  go.mod  go.sum  main.go  types.go
(+390 files in other folders)
