[tool.poetry]
name = "smallo1"
version = "0.1.0"
description = ""
authors = ["Amir Khalife <eng.amir.bu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "*"
pydantic = ">=2.9.2,<3"
pydantic-settings = ">=2.6.0,<3"
sentry-sdk = "*"

[tool.poetry.scripts]
small-o1 = 'smallo1.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py38']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
skip = ["venv/"]
